--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,6 +10,10 @@
     <meta name="description" content="">
 
     <!-- Styles -->
+    <!-- @TODO: compile src sass instead -->
+    <link rel="stylesheet" href="vendor/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="vendor/bower_components/kendo/styles/kendo.common.min.css" />
+    <link rel="stylesheet" href="vendor/bower_components/kendo/styles/kendo.metro.min.css" />
 
 
   </head>
