--- a/src/client/screens/_example/example.html
+++ b/src/client/screens/_example/example.html
@@ -1,5 +1,10 @@
-<section id="Example">
-    
-    <div id="SampleInput"></div>
+<section id="Example" class="container-fluid">
+<div class="row">
+        
+    <div class="col-md-4">
+        <div id="SampleInput"></div>
+        <div id="SampleDropDown"></div>
+    </div>
 
+</div>
 </section>
