--- a/src/client/index.html
+++ b/src/client/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="vendor/kendo/styles/kendo.common.min.css" />
     <link rel="stylesheet" href="vendor/kendo/styles/kendo.metro.min.css" />
+    <link rel="stylesheet" href="styles/global.css" />
 
 
   </head>
