--- a/src/client/screens/_dev/_example/example.html
+++ b/src/client/screens/_dev/_example/example.html
@@ -1,10 +1,1 @@
-<section id="Example" class="container-fluid">
-<div class="row">
-        
-    <div class="col-md-4">
-        <div id="SampleInput"></div>
-        <div id="SampleDropDown"></div>
-    </div>
-
-</div>
-</section>
+<section id="Example" class="container-fluid"><div class="row"><div class="col-md-4"><div id="SampleInput">    </div><div id="SampleDropDown"></div></div></div></section>
