start kendo styling

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -13,7 +13,7 @@
     <!-- @TODO: compile src sass instead -->
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="vendor/kendo/styles/kendo.common.min.css" />
-    <link rel="stylesheet" href="vendor/kendo/styles/kendo.metro.min.css" />
+    <link rel="stylesheet" href="vendor/kendo/styles/kendo.bootstrap.min.css" />
     <link rel="stylesheet" href="styles/global.css" />
 
 
