--- a/src/client/index.html
+++ b/src/client/index.html
@@ -24,10 +24,14 @@
     <section id="MainView">
     </section>
     <!-- End App Content -->
-
+    
+    <!--
     <script src="vendor/system.js"></script>
     <script src="core/jspm_config.js"></script>
     <script> System.import('app'); </script>
+    -->
+
+    <script src="build.js"></script>
 
 </body>
 </html>
