--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang=''>
   <head>
-    <title>Ulysses | Framework</title>       
+    <title>Hai Huynhlam | Software Engineer</title>       
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
     <meta name="format-detection" content="telephone=no"/>
